# viworkdemo002

./: .gitignore  00000 DESKTOP_MOBILE_AUTH_IMPLEMENTATION_PLAN.md  CURRENT_STATUS_ANALYSIS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PROTOCOL_GUIDE.md  DEPLOYMENT_TRIGGER.md  DIGITALOCEAN_DEPLOYMENT_GUIDE.md  DIGITALOCEAN_SETUP_GUIDE.md  DNS_SETUP_GUIDE.md  FINAL_COMPLETE_SUCCESS_REPORT.md  FINAL_SECURITY_RECOMMENDATION.md  GATEWAY_AGENT_SPECIFICATION.md  GITHUB_ACTIONS_SETUP_GUIDE.md  GITHUB_DEPLOYMENT_GUIDE.md  IMMEDIATE_SECURITY_ACTIONS.md  IMPLEMENTATION_PLAN.md  Makefile  QUICK_START_DEPLOYMENT.md  README.md  SECURITY_CHECKLIST.md  SECURITY_FIXES_SUMMARY.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SIMPLIFIED_AUTH_FLOW_PLAN.md  SQLX_MIGRATION_ANALYSIS.md  SQLX_TO_POSTGRES_MIGRATION_PLAN.md  UPDATE_SSH_KEY.md  action-plan.md  audit-report.md  demo-plan.md  deploy-to-digitalocean.sh  docker-compose.yml  env.production  github-log.md  install-android-app.sh  package-lock.json  package.json  path to successfull agent run.md  production_connectivity_test.md  production_deployment_tracker.md  rebuild-backend-remote.sh  (+7 more)
backend agent/: Cargo.toml  IMPLEMENTATION_STATUS.md  README.md  deploy-to-digitalocean-simple.sh  deploy-to-digitalocean.sh  deployment-test.txt  env.example  test-trigger.txt
backend agent/config/: backend-agent.toml
backend agent/scripts/: build-release.sh
backend agent/src/: config.rs  error.rs  main.rs
backend agent/src/agent/: connection.rs  manager.rs  mod.rs  registry.rs
backend agent/src/api/: auth.rs  handlers.rs  mod.rs  routes.rs
backend agent/src/command/: engine.rs  executor.rs  mod.rs  queue.rs
backend agent/src/data/: mod.rs  models.rs  postgres.rs  redis.rs
backend agent/src/telemetry/: analytics.rs  mod.rs  processor.rs  storage.rs
backup/agent/: .env.example  Cargo.toml  Dockerfile  Dockerfile.alpine-build  Dockerfile.alpine-production  agent-outbound.toml  viworks-gateway-agent.service
backup/agent/os agent/: GITHUB_ACTIONS_SETUP.md  security-audit-report-20250831-164838.md
backup/agent/os agent/viworks-source-20250831-181604/: agent.toml  monitoring.rs  security_enhanced.rs  validation.rs
backup/agent/scripts to run/: add_user.sh
backup/agent/src/: api.rs  audit.rs  error.rs  main.rs
backup/agent/src/outbound/: connection.rs  envelope.rs
digital ocean docker/backend/: Cargo.toml  Dockerfile  Dockerfile.fixed  Dockerfile.test  SECURITY_MONITORING.md  deploy-backend.sh  env.production.example  setup-server.sh  test.md  viworks-backend.service
digital ocean docker/backend/.github/workflows/: deploy-backend.yml
digital ocean docker/backend/migrations/: 002_admin_auth_separation.sql
digital ocean docker/backend/ops/: entrypoint.sh  entrypoint_simple.sh  net_triage.sh
digital ocean docker/backend/src/: main.rs  main_admin.rs  main_demo.rs  main_simple.rs  main_simple_test.rs
digital ocean docker/backend/src/admin/: audit.rs  auth.rs  jwt.rs  middleware.rs  mod.rs  models.rs  rbac.rs
digital ocean docker/backend/src/api/: agent.rs  auth.rs  sessions.rs  users.rs
digital ocean docker/backend/src/auth/: middleware.rs
digital ocean docker/backend/src/utils/: jwt.rs
digital ocean docker/backend/src/websocket/: handler.rs  messages.rs  mod.rs  session.rs
macos/: Cargo.toml  test-digitalocean-connection.sh
macos/apps/desktop_egui/src/: main.rs
macos/apps/desktop_egui/src/handlers/: diagnostics.rs  logging.rs
macos/apps/desktop_egui/src/ui/: connection_panel.rs  error_panel.rs  login_panel.rs  mod.rs
macos/crates/auth_api/src/: client.rs  lib.rs
macos/crates/connection_manager/: Cargo.toml
macos/crates/core/src/: security.rs  security_dashboard.rs  validation.rs
macos/crates/platform/: Cargo.toml
macos/crates/platform/src/: lib.rs  macos_security.rs  wintrust.rs
macos/crates/spa_fwknop/: Cargo.toml
macos/crates/spa_fwknop/src/: lib.rs
macos/crates/stunnel/: Cargo.toml
macos/crates/vpn_openvpn/: Cargo.toml
macos/scripts/: create_distribution.ps1  dev_build.sh  fast_build.ps1  fast_build.sh  install.ps1  release.ps1  run_app.ps1  test_connection.ps1  test_connection.sh
viworksclient01/products/admin-panel/backup/viworks-backend/: .gitignore  Cargo.toml  Cargo.toml.migration  Dockerfile  security-audit-20250830.txt
viworksclient01/products/admin-panel/backup/viworks-backend/.do/: app.yaml
viworksclient01/products/admin-panel/backup/viworks-backend/.github/workflows/: security-check.yml
viworksclient01/products/admin-panel/backup/viworks-backend/scripts/: security-check.sh
viworksclient01/products/admin-panel/backup/viworks-backend/src/: auth.rs  database.rs  main.rs  main_demo.rs  main_fixed.rs  main_minimal.rs  main_production.rs  middleware.rs
viworksclient01/products/admin-panel/backup/viworks-backend/src/api/: agent.rs  health.rs  mod.rs
viworksclient01/products/admin-panel/backup/viworks-backend/src/websocket/: handler.rs
viworksclient01/products/admin-panel/viworks-admin-panel/windows-client-backend/: Cargo.toml
viworksclient01/products/admin-panel/viworks-admin-panel/windows-client-backend/src/: auth.rs  main.rs  models.rs
viworksclient01/products/clients/macos/apps/desktop_egui/: Cargo.toml
viworksclient01/products/clients/macos/apps/desktop_egui/src/: app.rs  app_new.rs  tray.rs  ui_helpers.rs
viworksclient01/products/clients/macos/crates/auth_api/: Cargo.toml
viworksclient01/products/clients/macos/crates/auth_api/src/: client.rs  dpapi.rs  pinning.rs
viworksclient01/products/clients/windows/: Cargo.toml  README.md
viworksclient01/products/clients/windows/apps/desktop_egui/: Cargo.toml
viworksclient01/products/clients/windows/apps/desktop_egui/src/: app.rs  lib.rs  main.rs  tray.rs
viworksclient01/products/clients/windows/crates/auth_api/: Cargo.toml
viworksclient01/products/clients/windows/crates/core/: Cargo.toml
viworksclient01/products/clients/windows/crates/platform/: Cargo.toml
viworksclient01/products/clients/windows/scripts/: release_simple.ps1  run_with_logs.ps1
viworksclient01/products/clients/windows/security/: cargo-deny.toml
(+824 files in other folders)
