[package]
name = "viworks-backend-agent"
version = "0.1.0"
edition = "2021"
authors = ["ViWorkS Team"]
description = "Backend Agent for managing multiple OS agents with secure command execution and telemetry collection"
license = "MIT"
repository = "https://github.com/viworks/backend-agent"

[dependencies]
# Web Framework
actix-web = "4.4"
actix-cors = "0.7"
actix-web-httpauth = "0.8"
actix-rt = "2.11"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "cluster"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"
toml = "0.8"

# Security
jsonwebtoken = "9.2"
ring = "0.17"
base64 = "0.21"
sha2 = "0.10"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
num_cpus = "1.16"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# URL parsing
url = "2.4"

# Async traits
async-trait = "0.1"

# Time utilities
time = "0.3"

# Collections
dashmap = "5.5"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
testcontainers = "0.15"

[[bin]]
name = "viworks-backend-agent"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
