[package]
name = "viworks-gateway-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.14"
toml = "0.8"
rustls = "0.21"
webpki-roots = "0.25"
ring = "0.17"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.37"
bollard = "0.15"
nix = "0.27"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
once_cell = "1.18"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
hostname = "0.3"
async-trait = "0.1"
md5 = "0.7"
rand = "0.8"
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
url = "2.4"
futures-util = "0.3"
