[package]
name = "viworks-admin-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }





# Database dependencies - PostgreSQL only (excludes MySQL to avoid RSA vulnerability)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "derive"], default-features = false }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Additional utilities
bcrypt = "0.15"
jsonwebtoken = "9.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.0"



[profile.release]
opt-level = 2
lto = true