[package]
name = "viworks-vpn-openvpn"
version = "1.0.0"
edition = "2021"

[dependencies]
# Workspace dependencies
viworks-core = { path = "../core" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }




