[package]
name = "viworks-admin-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.0"

[profile.release]
opt-level = 2
lto = true