[package]
name = "windows-client-backend"
version = "0.1.0"
edition = "2021"
authors = ["ViWorkS Team"]
description = "Simplified backend for Windows Client integration"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.6"

# Async runtime  
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
rand = "0.8"
lazy_static = "1.4"
