[package]
name = "viworks-desktop"
version = "1.0.0"
edition = "2021"

[dependencies]
# Workspace dependencies
viworks-core = { path = "../../crates/core" }
viworks-auth-api = { path = "../../crates/auth_api" }
viworks-platform = { path = "../../crates/platform" }
viworks-spa-fwknop = { path = "../../crates/spa_fwknop" }
viworks-vpn-openvpn = { path = "../../crates/vpn_openvpn" }
viworks-stunnel = { path = "../../crates/stunnel" }
viworks-connection-manager = { path = "../../crates/connection_manager" }

# GUI dependencies
eframe = { workspace = true }
egui = { workspace = true }
rfd = { workspace = true }

# Core dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
zeroize = { workspace = true }

# macOS-specific dependencies
objc = { workspace = true }
cocoa = { workspace = true }
core-foundation = { workspace = true }
core-graphics = { workspace = true }
security-framework = { workspace = true }
launchctl = { workspace = true }
libc = { workspace = true }

# Additional dependencies
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }




