[package]
name = "viworks-auth-api"
version = "1.0.0"
edition = "2021"

[dependencies]
# Workspace dependencies
viworks-core = { path = "../core" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
x509-parser = { workspace = true }
sha2 = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

# macOS-specific dependencies
security-framework = { workspace = true }
core-foundation = { workspace = true }




