[package]
name = "viworks-core"
version = "1.0.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
dirs = { workspace = true }
zeroize = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
lazy_static = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }




